2007-05-01  Stephen J. Turnbull  <stephen@xemacs.org>

	* dumped-lisp.el (preloaded-file-list): Move resize-minibuffer
	before simple.

	* resize-minibuffer.el: Remove CVS $Id: ChangeLog,v 1.793 2007/05/01 14:32:50 stephent Exp $ cookie..

	* resize-minibuffer.el (resize-minibuffer-mode): Remove autoload.

2007-04-30  Stephen J. Turnbull  <stephen@xemacs.org>

	* simple.el (raw-append-message):
	Improve resizing of echo area --- now obeys resize-minibuffer
	conventions.

	* resize-minibuffer.el (resize-minibuffer-idle-height): New.
	* simple.el (undisplay-echo-area-resize-window-allowed): New.
	* simple.el (undisplay-echo-area-resize-window): New.
	Add function to shrink echo area when idle.  (incomplete)

	* simple.el (log-message-ignore-regexps):
	* simple.el (undisplay-echo-area-function):
	* simple.el (clear-message):
	* simple.el (append-message):
	* simple.el (display-message):
	Improve docstrings.

2007-04-22  Aidan Kehoe  <kehoea@parhasard.net>

	* specifier.el (device-type-matches-spec):
	Add `msprinter' to the type of devices that are not window
	systems. 
	* specifier.el (derive-device-type-from-tag-set):
	Remove a superflous empty line. 
	* specifier.el (derive-device-type-from-locale-and-tag-set):
	If CURRENT-DEVICE is provided, only ever return its type (if it
	matches TAG-SET) or nil (if it doesn't).

2007-01-02  Aidan Kehoe  <kehoea@parhasard.net>

	* cus-face.el (custom-set-face-update-spec):
	Fix some formatting. 
	* faces.el (reset-face):
	reset-face resets other faces to behave like the default face--it
	shouldn't do anything if it's handed the default face. 
	* font-menu.el:
	* font-menu.el (font-menu-set-font):
	If the font was initialised from X resources (the tag-set
	contains 'x-resource) pretend to Custom that it has
	responsibility for those settings.
	* x-faces.el:
	Add a couple of fontconfig functions to the
	globally-declare-fboundp, to eliminate a couple of byte-compile
	warnings. 